@@ -1,3 +1,8 @@
+2013-02-25  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/assocd.test:	[Bugs 3605719,3605720] Test independence.
+	* tests/basic.test:	Thanks Rolf Ade for patches.
+
 2013-02-22  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclCompile.c:	Shift more burden of smart cleanup onto the
